adding eat-da-burger img and libks to index and portfolio

--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
                     </div>
                     <div class="col mb-4">
                       <div class="card h-100">
-                        <img src="./assets/imgs/Code_Quiz_Demo.JPG" class="card-img-top" alt="placeholder img">
+                        <img src="./assets/imgs/Eat_Da_Burger_Demo.JPG" class="card-img-top" alt="placeholder img">
                         <!-- rowbgc class -->
                         <div class="card-body rowbgc">
-                          <h5 class="card-title"><a class="portLink" href="https://malex19889.github.io/Js_Code_Quiz/" >JS Code Quiz</a></h5>
-                          <p class="card-text">Project info: A simple 10 question quiz game</p>
+                          <h5 class="card-title"><a class="portLink" href="https://eat-da-burgerzz.herokuapp.com/" >Eat-Da-Burger</a></h5>
+                          <p class="card-text">Project info: A fun burger management app </p>
                         </div>
                       </div>
                     </div>
