--- a/portfolio.html
+++ b/portfolio.html
@@ -63,16 +63,20 @@
               <a class="portLink" href="https://github.com/malex19889/Js_Code_Quiz.git"><h4>Js Code Quiz</h4></a>
             </div>
             <div class="col-md-4">
-              <a href=" https://malex19889.github.io/Weather-Dashboard/" target="_self"><img src="./assets/imgs/Weather_Dash_Demo.JPG" class="img-fluid" alt="placeholder"></a>
+              <a href=" https://malex19889.github.io/Weather-Dashboard/" target="_self"><img src="./assets/imgs/Weather_Dash_Demo.JPG" class="img-fluid" alt="weather dashboard screenshots"></a>
               <a class="portLink" href="https://github.com/malex19889/Weather-Dashboard.git"><h4>Weather Dashboard</h4></a>
             </div>
             <div class="col-md-4">
-              <a href="https://malex19889.github.io/Who-s-Open/" target="_self"><img src="./assets/imgs/Whos_Open1.JPG" class="img-fluid" alt="placeholder"></a>
+              <a href="https://malex19889.github.io/Who-s-Open/" target="_self"><img src="./assets/imgs/Whos_Open1.JPG" class="img-fluid" alt="whosopen screenshots"></a>
               <a class="portLink" href="https://github.com/malex19889/Who-s-Open.git"><h4>Who's Open</h4></a>
             </div>
             <div class="col-md-4">
-              <a href="https://malex19889.github.io/Who-s-Open/" target="_self"><img src="./assets/imgs/Whos_Open2.JPG" class="img-fluid" alt="placeholder"></a>
+              <a href="https://malex19889.github.io/Who-s-Open/" target="_self"><img src="./assets/imgs/Whos_Open2.JPG" class="img-fluid" alt="whosopen screenshots"></a>
               <a class="portLink" href="https://github.com/malex19889/Who-s-Open.git"><h4>Who's Open</h4></a>
+            </div>
+            <div class="col-md-4">
+              <a href="https://eat-da-burgerzz.herokuapp.com/" target="_self"><img src="./assets/imgs/Eat_Da_Burger_Demo.JPG" class="img-fluid" alt="eat-da-burger screenshots"></a>
+              <a class="portLink" href="https://github.com/malex19889/Who-s-Open.git"><h4>Eat-Da-Burger</h4></a>
             </div>
             <!-- for future project pics -->
             <!-- <div class="col-md-4">
