updated incorect redirect to repo on eat-da-burger

--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
             </div>
             <div class="col-md-4">
               <a href="https://eat-da-burgerzz.herokuapp.com/" target="_self"><img src="./assets/imgs/Eat_Da_Burger_Demo.JPG" class="img-fluid" alt="eat-da-burger screenshots"></a>
-              <a class="portLink" href="https://github.com/malex19889/Who-s-Open.git"><h4>Eat-Da-Burger</h4></a>
+              <a class="portLink" href="https://github.com/malex19889/burger.git"><h4>Eat-Da-Burger</h4></a>
             </div>
             <!-- for future project pics -->
             <!-- <div class="col-md-4">
