adding project 2 to portfolio and current projects on index

--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
                 <div class="row">
                     <div class="col mb-4">
                       <div class="card h-100">
-                        <img src="./assets/imgs/Weather_Dash_Demo.JPG" class="card-img-top" alt="placeholder img">
+                        <img src="./assets/imgs/audiofiler.JPG" class="card-img-top" alt="audiofiler img">
                         <!-- rowbgc class -->
                         <div class="card-body rowbgc">
-                          <h5 class="card-title"><a class="portLink" href="https://malex19889.github.io/Weather-Dashboard/" >Weather-Dashboard</a></h5>
-                          <p class="card-text">Project info: this app lets the user search for any city and get the current weather and a 5 day forecast fo that city, and also saves the users search history.</p>
+                          <h5 class="card-title"><a class="portLink" href="https://github.com/malex19889/Project2.git" >Audiofiler</a></h5>
+                          <p class="card-text">Project info: this app lets the user save their music collection with notes and media type and store it to a database</p>
                         </div>
                       </div>
                     </div>
