--- a/portfolio.html
+++ b/portfolio.html
@@ -78,6 +78,10 @@
               <a href="https://eat-da-burgerzz.herokuapp.com/" target="_self"><img src="./assets/imgs/Eat_Da_Burger_Demo.JPG" class="img-fluid" alt="eat-da-burger screenshots"></a>
               <a class="portLink" href="https://github.com/malex19889/burger.git"><h4>Eat-Da-Burger</h4></a>
             </div>
+            <div class="col-md-4">
+              <a href="https://blooming-wildwood-71202.herokuapp.com/" target="_self"><img src="./assets/imgs/audiofiler.JPG" class="img-fluid" alt="audiofiler screenshots"></a>
+              <a class="portLink" href="https://github.com/malex19889/Project2.git"><h4>Audiofiler</h4></a>
+            </div>
             <!-- for future project pics -->
             <!-- <div class="col-md-4">
               <a href="../Portfolio/assets/imgs/16_10_45.jpg" target="_self"><img src="https://via.placeholder.com/600x320" class="img-fluid" alt="placeholder"></a>
